# onlybtc

./: .env.example  .gitattributes  .gitignore  README.md  task index.md  ui方案-p5-dashboard.md  业务链路对齐矩阵.md  开发文档.md  指标优化.md  数据源真实采集审计.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_metric_window_fields.py
backend/scripts/: bitbo_capture_visible.py
backend/src/onlybtc/: cli.py
backend/src/onlybtc/algorithms/: p3.py  (+2 more)
backend/tests/: test_api.py  test_api_contracts.py  test_api_security.py  test_api_startup.py  test_btc_direct_evidence_registry.py  test_btc_direct_trend_evidence.py  test_btc_direct_trend_state_machine.py  test_btc_timescale_replay.py  test_db.py  test_env_settings_update.py  test_event_watchtower.py  test_event_watchtower_offline.py  test_glassnode_entitlement.py  test_llm_routing.py  test_logging.py  test_p10_api_settings_dod.py  test_p1_c22_audit.py  test_p2_full_chain_audit.py  test_p3_features.py  test_p3_full_chain_audit.py  test_p3_pipeline.py  test_p45_boundary.py  test_p45_btc_trend_cockpit.py  test_p45_dashboard_api.py  test_p45_evidence_pack.py  test_p45_explanations.py  test_p45_final_writer.py  test_p45_full_chain_with_llm.py  test_p45_html_report.py  test_p45_invalidation_workbench.py  test_p45_llm_analyst_writer.py  test_p45_llm_research_writer.py  test_p45_timescale_judge.py  test_p45_writer.py  test_p4_adversarial_review.py  test_p4_agent_runtime.py  test_p4_analyst_executor.py  test_p4_article_writer.py  test_p4_cross_exam.py  test_p4_evidence_pack.py  (+34 more)
(+822 files in other folders)
