[project]
name = "onlybtc"
version = "0.1.0"
description = "BTC trend sensing and alert system"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "playwright>=1.52.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]
agents = [
  "openai-agents>=0.14.0",
]

[project.scripts]
onlybtc = "onlybtc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onlybtc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
